--- a/package.json
+++ b/package.json
@@ -17,13 +17,13 @@
     "@tanstack/zod-form-adapter": "^0.42.1",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
-    "html2canvas": "^1.4.1",
+    "html2canvas-pro": "^2.0.0",
     "jspdf": "^4.2.0",
     "lucide-react": "^0.575.0",
     "next": "16.1.6",
     "radix-ui": "^1.4.3",
     "react": "19.2.3",
-    "react-dom": "19.2.3",    
+    "react-dom": "19.2.3",
     "tailwind-merge": "^3.5.0",
     "zod": "^4.3.6"
   },
