--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "format": "biome format --write"
   },
   "dependencies": {
+    "@clerk/nextjs": "^6.38.2",
     "@neondatabase/serverless": "^1.0.2",
     "@tanstack/react-form": "^1.28.3",
     "@tanstack/react-query": "^5.90.21",
